--- a/Emoji Dictionary/Base.lproj/Main.storyboard
+++ b/Emoji Dictionary/Base.lproj/Main.storyboard
@@ -41,5 +41,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="P0d-P3-YEJ">
+            <objects>
+                <viewController id="OgT-Np-BVa" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0SQ-hL-wH4"/>
+                        <viewControllerLayoutGuide type="bottom" id="XJT-MI-3UH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4E8-E6-ETz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="💒" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fpI-Ee-Wt3">
+                                <rect key="frame" x="78" y="60" width="218" height="239"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="200"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="This is a lovely church" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mff-cq-8YY">
+                                <rect key="frame" x="103" y="372" width="169" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Mff-cq-8YY" firstAttribute="centerX" secondItem="4E8-E6-ETz" secondAttribute="centerX" id="BES-aX-BY6"/>
+                            <constraint firstItem="Mff-cq-8YY" firstAttribute="top" secondItem="fpI-Ee-Wt3" secondAttribute="bottom" constant="50" id="e1Y-zq-7sy"/>
+                            <constraint firstItem="fpI-Ee-Wt3" firstAttribute="centerX" secondItem="4E8-E6-ETz" secondAttribute="centerX" id="ygZ-en-l3c"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gmn-b9-4gV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="572" y="137"/>
+        </scene>
     </scenes>
 </document>
